--- a/paper/Makefile
+++ b/paper/Makefile
@@ -7,6 +7,18 @@ all:
 	bibtex dali
 	pdflatex -shell-escape dali
 
+# Check style:
+proof:
+	echo "weasel words: "
+	sh bin/weasel *.tex
+	echo
+	echo "passive voice: "
+	sh bin/passive *.tex
+	echo
+	echo "duplicates: "
+	perl bin/dups *.tex
+
+
 haste:
 	pdflatex -shell-escape dali
 
